adding some statistics

--- a/text/bibli.bib
+++ b/text/bibli.bib
@@ -2557,52 +2557,6 @@ year={1972}
           \url{http://www.worldvaluessurvey.org}},
 }
 
-@book{inglehart2005modernization,
-  title={Modernization, cultural change, and democracy: The human development sequence},
-  author={Inglehart, Ronald and Welzel, Christian},
-  year={2005},
-  publisher={Cambridge University Press}
-}
-
-@article{foa2017signs,
-  title={The signs of deconsolidation},
-  author={Foa, Roberto Stefan and Mounk, Yascha},
-  journal={Journal of Democracy},
-  volume={28},
-  number={1},
-  pages={5--15},
-  year={2017},
-  publisher={Johns Hopkins University Press}
-}
-
-@article{norris2017western,
-  title={Is Western democracy backsliding? Diagnosing the risks},
-  journal={Journal of Democracy Web Exchange},
-  author={Norris, Pippa},
-  year={2017}
-}
-
-@article{voeten2016people,
-  title={Are people really turning away from democracy?},
-  journal={Journal of Democracy Web Exchange},
-  author={Voeten, Erik},
-  year={2016}
-}
-
-@article{alexander2017myth,
-  title={The myth of deconsolidation: Rising liberalism and the populist reaction},
-  author={Alexander, Amy C and Welzel, Christian},
-  year={2017},
-  journal={Journal of Democracy Web Exchange}
-}
-
-@article{foa2017end,
-  title={The end of the consolidation paradigm},
-  author={Foa, R and Mounk, Yascha},
-  year={2017},
-  journal={Journal of Democracy Web Exchange}
-}
-
 @article{voeten2018populism,
   title={Populism and Backlashes Against International Courts},
   author={Voeten, Erik},
@@ -2644,5 +2598,184 @@ year={1972}
 }
 
 
+@article{miguel2015vale,
+  title={Quanto vale uma val{\^e}ncia?},
+  author={Miguel, Luis Felipe},
+  journal={Revista Brasileira de Ci{\^e}ncia Pol{\'\i}tica},
+  number={17},
+  pages={165--178},
+  year={2015},
+  publisher={SciELO Brasil}
+}
 
+@article{feres2016analise,
+  title={An{\'a}lise de val{\^e}ncias, debate acad{\^e}mico e contenda pol{\'\i}tica},
+  author={FERES J{\'U}NIOR, Jo{\~a}o},
+  journal={Revista Brasileira de Ci{\^e}ncia Pol{\'\i}tica},
+  volume={20},
+  year={2016}
+}
+
+@article{freitas2012vampiro,
+  title={Vampiro que brilha... r{\'a}! desafios na anota{\c{c}}ao de opiniao em um corpus de resenhas de livros},
+  author={Freitas, Cl{\'a}udia and Motta, Eduardo and Milidi{\'u}, R and C{\'e}sar, Juliana},
+  journal={Encontro de Lingu{\'\i}stica de Corpus},
+  volume={11},
+  pages={22},
+  year={2012}
+}
+
+@article{freitas2014sparkling,
+  title={Sparkling vampire... lol! Annotating opinions in a book review corpus},
+  author={Freitas, Cl{\'a}udia and Motta, Eduardo and Milidi{\'u}, Ruy L and C{\'e}sar, Juliana and Alu{\'\i}sio, Sandra and Tagnin, Stella EO},
+  journal={New Language Technologies and Linguistic Research: A Two-Way Road},
+  pages={128--146},
+  year={2014}
+}
+
+@article{freitas2013construccao,
+  title={Sobre a constru{\c{c}}{\~a}o de um l{\'e}xico da afetividade para o processamento computacional do portugu{\^e}s},
+  author={Freitas, Cl{\'a}udia},
+  journal={Revista Brasileira de Lingu{\'\i}stica Aplicada},
+  volume={13},
+  number={4},
+  pages={1031--1059},
+  year={2013},
+  publisher={SciELO Brasil}
+}
+
+@inproceedings{cohen2013classifying,
+  title={Classifying political orientation on Twitter: It’s not easy!},
+  author={Cohen, Raviv and Ruths, Derek},
+  booktitle={Seventh International AAAI Conference on Weblogs and Social Media},
+  year={2013}
+}
+
+@inproceedings{fang2012mining,
+  title={Mining contrastive opinions on political texts using cross-perspective topic model},
+  author={Fang, Yi and Si, Luo and Somasundaram, Naveen and Yu, Zhengtao},
+  booktitle={Proceedings of the fifth ACM international conference on Web search and data mining},
+  pages={63--72},
+  year={2012}
+}
+
+@inproceedings{balasubramanyan2012modeling,
+  title={Modeling polarizing topics: When do different political communities respond differently to the same news?},
+  author={Balasubramanyan, Ramnath and Cohen, William W and Pierce, Douglas and Redlawsk, David P},
+  booktitle={Sixth International AAAI Conference on Weblogs and Social Media},
+  year={2012}
+}
+
+@inproceedings{chen2010opinion,
+  title={What is an opinion about? exploring political standpoints using opinion scoring model},
+  author={Chen, Bi and Zhu, Leilei and Kifer, Daniel and Lee, Dongwon},
+  booktitle={Twenty-Fourth AAAI Conference on Artificial Intelligence},
+  year={2010}
+}
+
+@article{song2014analyzing,
+  title={Analyzing the political landscape of 2012 Korean presidential election in Twitter},
+  author={Song, Min and Kim, Meen Chul and Jeong, Yoo Kyung},
+  journal={IEEE Intelligent Systems},
+  volume={29},
+  number={2},
+  pages={18--26},
+  year={2014},
+  publisher={IEEE}
+}
+
+@article{levy2014driving,
+  title={Driving regulation: Using topic models to examine political contention in the US trucking industry},
+  author={Levy, Karen EC and Franklin, Michael},
+  journal={Social Science Computer Review},
+  volume={32},
+  number={2},
+  pages={182--194},
+  year={2014},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{zirn2014multidimensional,
+  title={Multidimensional topic analysis in political texts},
+  author={Zirn, C{\"a}cilia and Stuckenschmidt, Heiner},
+  journal={Data \& Knowledge Engineering},
+  volume={90},
+  pages={38--53},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{van2014lda,
+  title={LDA models topics.... But what are “topics”},
+  author={Van Atteveldt, Wouter and Welbers, Kasper and Jacobi, Carina and Vliegenthart, Rens},
+  booktitle={Big data in the social sciences workshop},
+  year={2014}
+}
+
+@article{freitas2013construccao,
+  title={Sobre a constru{\c{c}}{\~a}o de um l{\'e}xico da afetividade para o processamento computacional do portugu{\^e}s},
+  author={Freitas, Cl{\'a}udia},
+  journal={Revista Brasileira de Lingu{\'\i}stica Aplicada},
+  volume={13},
+  number={4},
+  pages={1031--1059},
+  year={2013},
+  publisher={SciELO Brasil}
+}
+
+@article{pennebaker1997linguistic,
+  title={Linguistic predictors of adaptive bereavement.},
+  author={Pennebaker, James W and Mayne, Tracy J and Francis, Martha E},
+  journal={Journal of personality and social psychology},
+  volume={72},
+  number={4},
+  pages={863},
+  year={1997},
+  publisher={American Psychological Association}
+}
+
+@article{pennebaker1996cognitive,
+  title={Cognitive, emotional, and language processes in disclosure},
+  author={Pennebaker, James W and Francis, Martha E},
+  journal={Cognition \& Emotion},
+  volume={10},
+  number={6},
+  pages={601--626},
+  year={1996},
+  publisher={Taylor \& Francis}
+}
+
+@article{carvalho2015sentilex,
+  title={SentiLex-PT: Principais caracter{\'\i}sticas e potencialidades},
+  author={Carvalho, Paula and Silva, M{\'a}rio J},
+  journal={Oslo Studies in Language},
+  volume={7},
+  number={1},
+  year={2015}
+}
+
+@article{carvalho2015sentilex,
+  title={SentiLex-PT: Principais caracter{\'\i}sticas e potencialidades},
+  author={Carvalho, Paula and Silva, M{\'a}rio J},
+  journal={Oslo Studies in Language},
+  volume={7},
+  number={1},
+  year={2015}
+}
+
+@inproceedings{souza2011construction,
+  title={Construction of a portuguese opinion lexicon from multiple resources},
+  author={Souza, Marlo and Vieira, Renata and Busetti, D{\'e}bora and Chishman, Rove and Alves, Isa Mara},
+  booktitle={Proceedings of the 8th Brazilian Symposium in Information and Human Language Technology},
+  year={2011}
+}
+
+@inproceedings{machado2018creating,
+  title={Creating a Portuguese context sensitive lexicon for sentiment analysis},
+  author={Machado, Mateus Tarcinalli and Pardo, Thiago AS and Ruiz, Evandro Eduardo Seron},
+  booktitle={International Conference on Computational Processing of the Portuguese Language},
+  pages={335--344},
+  year={2018},
+  organization={Springer}
+}
 
